2013-08-20  Carl Hetherington  <carl@d1stkfactory>

	* Try to avoid erroneous enabling of
	pad-with-silence option.

2013-08-20  Carl Hetherington  <cth@carlh.net>

	* Version 0.123 released.

2013-08-19  Carl Hetherington  <cth@carlh.net>

	* Version 0.123beta2 released.

2013-08-19  Carl Hetherington  <cth@carlh.net>

	* Version 0.123beta1 released.

2013-08-19  Carl Hetherington  <cth@carlh.net>

	* Version 0.122 released.

2013-08-19  Carl Hetherington  <cth@carlh.net>

	* Slight modification to Rec 709 colour matrix
	from Wolfgang Woehl via Lilian Lefranc.

	* Add /usr/share/locale as a search path for .mo
	files on Linux.

2013-08-16  Carl Hetherington  <cth@carlh.net>

	* Version 0.121 released.

2013-08-14  Carl Hetherington  <cth@carlh.net>

	* Version 0.120 released.

2013-08-13  Carl Hetherington  <cth@carlh.net>

	* Version 0.120beta1 released.

2013-08-13  Carl Hetherington  <cth@carlh.net>

	* Allow building with wxWidgets 2.9.5

2013-08-09  Carl Hetherington  <cth@carlh.net>

	* Version 0.119 released.

2013-08-09  Carl Hetherington  <cth@carlh.net>

	* Version 0.118 released.

2013-08-08  Carl Hetherington  <cth@carlh.net>

	* Fix lack of output on Windows consoles.

2013-08-06  Carl Hetherington  <cth@carlh.net>

	* Version 0.117 released.

2013-08-05  Carl Hetherington  <cth@carlh.net>

	* Various Mac OS X installer fixes.

2013-07-30  Carl Hetherington  <cth@carlh.net>

	* Version 0.116 released.

2013-07-30  Carl Hetherington  <cth@carlh.net>

	* Version 0.115 released.

2013-07-30  Carl Hetherington  <cth@carlh.net>

	* Version 0.114 released.

2013-07-03  Carl Hetherington  <cth@carlh.net>

	* Fix no-audio DCPs with respect to padding.

2013-07-29  Carl Hetherington  <cth@carlh.net>

	* Version 0.113 released.

2013-07-29  Carl Hetherington  <cth@carlh.net>

	* Version 0.112 released.

2013-07-29  Carl Hetherington  <cth@carlh.net>

	* Version 0.111 released.

2013-07-29  Carl Hetherington  <cth@carlh.net>

	* Version 0.110 released.
