@@ -1,7 +1,11 @@
 2013-08-20  Carl Hetherington  <carl@d1stkfactory>
 
 	* Try to avoid erroneous enabling of
-	pad-with-silence option.
+	pad-with-silence option, and fix various
+	other heinous problems with pad-with-silence.
+
+	* Add primitive list of warnings about
+	possibly bad DCP settings.
 
 2013-08-20  Carl Hetherington  <cth@carlh.net>
 
